--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,15 @@ jobs:
       - name: Build project with maven
         run: mvn -B package --file pom.xml
       - name: Upload artifact
-        uses: actions/upload-artifact@master
+        uses: actions/upload-artifact@v3
         with:
           name: jar-file
           path: target/stringUnique-0.0.1-SNAPSHOT.jar
+  build_image:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/download-artifact@v3
+        with:
+          name: jar-file
