--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,4 +32,6 @@ jobs:
         with:
           context: .
           push: true
-          tags: danchuo/string-unique:${{ steps.version.outputs.version }}
+          tags: |
+            danchuo/string-unique:${{ steps.version.outputs.version }}
+            danchuo/string-unique:latest
